feat(follows): add follow API
